@@ -18,22 +18,25 @@ import tech.pegasys.pantheon.ethereum.core.BlockHeader;
 import tech.pegasys.pantheon.ethereum.eth.manager.AbstractPeerTask.PeerTaskResult;
 import tech.pegasys.pantheon.ethereum.eth.manager.EthContext;
 import tech.pegasys.pantheon.ethereum.eth.sync.ChainDownloader;
+import tech.pegasys.pantheon.ethereum.eth.sync.CheckpointHeaderManager;
 import tech.pegasys.pantheon.ethereum.eth.sync.SynchronizerConfiguration;
 import tech.pegasys.pantheon.ethereum.eth.sync.state.SyncState;
 import tech.pegasys.pantheon.ethereum.eth.sync.tasks.ImportBlocksTask;
 import tech.pegasys.pantheon.ethereum.eth.sync.tasks.PipelinedImportChainSegmentTask;
+import tech.pegasys.pantheon.ethereum.mainnet.HeaderValidationMode;
 import tech.pegasys.pantheon.ethereum.mainnet.ProtocolSchedule;
 import tech.pegasys.pantheon.metrics.LabelledMetric;
 import tech.pegasys.pantheon.metrics.OperationTimer;
 
-import java.util.Deque;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.Lists;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 public class FullSyncDownloader<C> {
+  private static final Logger LOG = LogManager.getLogger();
   private final ChainDownloader<C> chainDownloader;
   private final SynchronizerConfiguration config;
   private final ProtocolSchedule<C> protocolSchedule;
@@ -56,13 +59,13 @@ public class FullSyncDownloader<C> {
     chainDownloader =
         new ChainDownloader<>(
             config,
-            protocolSchedule,
-            protocolContext,
             ethContext,
             syncState,
             ethTasksTimer,
             new FullSyncTargetManager<>(
                 config, protocolSchedule, protocolContext, ethContext, syncState, ethTasksTimer),
+            new CheckpointHeaderManager<>(
+                config, protocolContext, ethContext, syncState, protocolSchedule, ethTasksTimer),
             this::importBlocksForCheckpoints);
   }
 
@@ -76,7 +79,7 @@ public class FullSyncDownloader<C> {
   }
 
   private CompletableFuture<List<Block>> importBlocksForCheckpoints(
-      final Deque<BlockHeader> checkpointHeaders) {
+      final List<BlockHeader> checkpointHeaders) {
     final CompletableFuture<List<Block>> importedBlocks;
     if (checkpointHeaders.size() < 2) {
       // Download blocks without constraining the end block
@@ -85,19 +88,22 @@ public class FullSyncDownloader<C> {
               protocolSchedule,
               protocolContext,
               ethContext,
-              checkpointHeaders.getFirst(),
+              checkpointHeaders.get(0),
               config.downloaderChainSegmentSize(),
               ethTasksTimer);
       importedBlocks = importTask.run().thenApply(PeerTaskResult::getResult);
     } else {
-      final PipelinedImportChainSegmentTask<C> importTask =
+      final PipelinedImportChainSegmentTask<C, Block> importTask =
           PipelinedImportChainSegmentTask.forCheckpoints(
               protocolSchedule,
               protocolContext,
               ethContext,
               config.downloaderParallelism(),
               ethTasksTimer,
-              Lists.newArrayList(checkpointHeaders));
+              new FullSyncBlockHandler<>(
+                  protocolSchedule, protocolContext, ethContext, ethTasksTimer),
+              HeaderValidationMode.DETACHED_ONLY,
+              checkpointHeaders);
       importedBlocks = importTask.run();
     }
     return importedBlocks;
